# supabase-page-search-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  mcp_config.json  pyproject.toml
